# DroneSys

./: .gitignore  .gitmodules  LICENSE  README.md  Ubuntu22_dependency_modification.bash  build.sh  compile_.sh  compile__.sh  compile_all.sh  compile_arm.sh  compile_try.sh  device_example.yaml
Driver/unitree_lidar_ros/: CMakeLists.txt
Driver/unitree_lidar_ros/include/: unitree_lidar_ros.h
Modules/control/: CMakeLists.txt  package.xml
Modules/control/autopilot/: package.xml
Modules/control/autopilot/parameters/: default.yaml
Modules/control/autopilot/src/: autopilot_node.cpp
Modules/control/control/: CMakeLists.txt  package.xml
Modules/control/control/include/: control_utils.h  gimbal_control.h  trajectory_generation.h
Modules/control/control/src/: gimbal_control.cpp  pub_planning_goal.cpp  terminal_control.cpp
Modules/control/differential_flatness_base_controller/: CMakeLists.txt  package.xml
Modules/control/differential_flatness_base_controller/include/: autopilot.h  dfbc_position_controller_node.h  position_controller.h
Modules/control/differential_flatness_base_controller/launch/: dfbc_position_controller_node.launch  dfbc_position_controller_px4.launch  dfbc_position_controller_rotors.launch
Modules/control/differential_flatness_base_controller/parameters/: default.yaml  fpv.yaml  position_controller.yaml
Modules/control/differential_flatness_base_controller/src/: autopilot_dfbc_instance.cpp  autopilot_node.cpp  dfbc_position_controller_node.cpp  position_controller.cpp
Modules/control/geometric_control/: CMakeLists.txt  package.xml
Modules/control/geometric_control/include/: common.h  geometric_position_controller.h  geometric_position_controller_node.h  geometric_position_controller_params.h  vehicle_parameters.h  vehicle_parameters_ros.h
Modules/control/geometric_control/launch/: geometric_position_controller_node.launch  geometric_position_controller_px4.launch  geometric_position_controller_rotors.launch
Modules/control/geometric_control/parameters/: geometric_controller.yaml
Modules/control/geometric_control/src/: geometric_position_controller.cpp  geometric_position_controller_node.cpp
Modules/control/include/: control_utils.h  trajectory_generation.h
Modules/control/include/Position_Controller/: pos_controller_cascade_PID.h
Modules/control/inner_loop_controller/: CMakeLists.txt  package.xml
Modules/control/inner_loop_controller/src/: inner_loop_controller.cpp
Modules/control/mav_control_rw/mav_disturbance_observer/: CMakeLists.txt
Modules/control/mav_control_rw/mav_linear_mpc/: CMakeLists.txt
Modules/control/mav_control_rw/mav_lowlevel_attitude_controller/: CMakeLists.txt
Modules/control/mav_control_rw/mav_nonlinear_mpc/: CMakeLists.txt
Modules/control/rotors_control/src/: attitude_controller_samy.cpp
Modules/control/rpg_mpc/: CMakeLists.txt  package.xml
Modules/control/rpg_mpc/launch/: mpc_controller_node.launch  mpc_controller_px4.launch  mpc_controller_rotors.launch
Modules/control/rpg_mpc/parameters/: autopilot.yaml  mpc_controller_hummingbird.yaml  mpc_controller_mav.yaml
Modules/control/rpg_mpc/src/: autopilot_mpc_instance.cpp  mpc_controller.cpp  mpc_node.cpp
Modules/control/scripts/: keyboard_control_px4.py
Modules/control/src/: pub_goal_from_qgc.cpp  terminal_control.cpp
Modules/controllers/: CMakeLists.txt  package.xml
Modules/controllers/include/: gimbal_control.h
Modules/controllers/include/Position_Controller/: pos_controller_PID.h  pos_controller_cascade_PID.h
Modules/controllers/src/: gimbal_control.cpp  terminal_control.cpp
Modules/mavros_interface/: CMakeLists.txt  package.xml
Modules/mavros_interface/include/: command_to_mavros.h  state_from_mavros.h
Modules/mavros_interface/src/: px4_commander.cpp  px4_transceiver.cpp
Modules/msgs/drone_msgs/: CMakeLists.txt
Modules/msgs/drone_msgs/msg/: Arduino.msg  AttitudeReference.msg  ControlCommand.msg  ControlOutput.msg  DroneState.msg  DroneTarget.msg  RCInput.msg
Modules/perception/opencv_sgbm/: CMakeLists.txt  package.xml
Modules/perception/opencv_sgbm/launch/: fisheye_undistort.launch  stereo_fisheye_undistort.launch  stereo_sgbm.launch
Modules/perception/opencv_sgbm/src/: opencv_sgbm.cpp
Modules/perception/points_worker/: CMakeLists.txt  package.xml
Modules/perception/points_worker/include/: points_filter.h
Modules/perception/semi_global_matching/: CMakeLists.txt  package.xml
Modules/planning/FastPlanner/: CMakeLists.txt  package.xml
Modules/planning/FastPlanner/config/: traj.rviz
Modules/planning/ego-planner/: CMakeLists.txt  package.xml
Modules/planning/histo-planner/: CMakeLists.txt  README.md  package.xml
Modules/planning/planning_simulator/: CMakeLists.txt  package.xml
Modules/sensors/joy_remote/: CMakeLists.txt
Modules/sensors/sensors/: CMakeLists.txt  package.xml
Modules/slam/point-lio/: CMakeLists.txt  package.xml
Modules/slam/stereo_matching/: CMakeLists.txt  package.xml
Simulator/gazebo_simulator/: CMakeLists.txt  package.xml
Simulator/gazebo_simulator/launch_basic/: single_vehicle_spawn_sdf.launch  sitl.launch  sitl_multi.launch  tf_transform.launch
Simulator/gazebo_simulator/launch_control/: sitl_terminal_control.launch
Simulator/gazebo_simulator/launch_planning/: planner_sim.launch  sitl_ego_planner.launch  sitl_fast_planning.launch  sitl_global_planner.launch  sitl_histo_planner.launch  sitl_local_planner.launch
Simulator/gazebo_simulator/launch_slam/: rtabmap_stereo.launch  sitl_cartorgrapher_2dlidar.launch
Simulator/gazebo_simulator/scripts/: get_ground_truth_formation.py  move_landing_pad.py
Simulator/gazebo_simulator/worlds/: empty.world  indoor_competition.world  landing_pad.world  multi_gate.world  obstacle_HTWY.world  obstacle_HTWY2.world
Simulator/rpg_simulator/: CMakeLists.txt  package.xml
Simulator/rpg_simulator/launch/: quadrotor_empty_world.launch
Simulator/rpg_simulator/parameters/: geometric_controller_hummingbird.yaml
Simulator/rpg_simulator/vehicles/: hummingbird_downlooking_color_camera.gazebo  hummingbird_frontlooking_color_camera.gazebo
(+1716 files in other folders)
