<?xml version="1.0"?>
<package format="2">
  <name>sensors</name>
  <version>0.0.0</version>
  <description>The sensors package</description>

  <maintainer email="w407022008@gamil.com">Ze</maintainer>
  
  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>drone_msgs</build_depend>
	<build_depend>pcl_ros</build_depend>
	<build_depend>pcl_conversions</build_depend>
	<build_depend>libpcl-all-dev</build_depend>	
	
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <build_export_depend>drone_msgs</build_export_depend>
    
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>drone_msgs</exec_depend>
	<exec_depend>pcl_ros</exec_depend>
	<exec_depend>pcl_conversions</exec_depend>
	<exec_depend>libpcl-all</exec_depend>




  <export>

  </export>
</package>
